# SearchWeave

./: .env.example  .gitignore  README.md  package-lock.json  package.json  releasing.md  vitest.config.ts
.github/workflows/: ci.yml  create-github-release.yml  publish-npm-cli.yml  publish-npm-client.yml  publish-py.yml
python/searchweave-py/: README.md  pyproject.toml
python/searchweave-py/src/searchweave/: __init__.py  cli.py  client.py  config.py  errors.py
python/searchweave-py/tests/: test_cli.py  test_config.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/search/: route.test.ts  route.ts
src/lib/search/: auth.ts  browser-fallback.ts  config.ts  dedupe.ts  fetcher.ts  search.ts  types.ts  url.ts  validation.ts
src/lib/search/__fixtures__/: bing-images.html  bing-text.html  brave-images.html  brave-text.html  duckduckgo-images.json  duckduckgo-lite-text.html  duckduckgo-text-with-next.html  duckduckgo-text.html  google-images.html  google-text.html
src/lib/search/__tests__/: parsers.test.ts  validation.test.ts
src/lib/search/adapters/: bing.ts  brave.ts  duckduckgo.ts  google.ts  index.ts
